# AtomicChargeCalculator2

./: .gitignore  .gitmodules  README.md  config.py
new/src/backend/: .gitignore  Dockerfile  Dockerfile.app  Dockerfile.chargefw2  README.md  entrypoint.sh  pyproject.toml  startup.sh
new/src/backend/app/: .env  .env.example  main.py
new/src/backend/app/api/v1/: constants.py  container.py
new/src/backend/app/core/dependency_injection/: container.py
new/src/backend/app/core/exceptions/: http.py
new/src/backend/app/core/logging/: base.py  db_logger.py  file_logger.py
new/src/backend/app/core/models/: calculation.py  method.py  molecule_info.py  paging.py  suitable_methods.py
new/src/backend/app/db/: database.py
new/src/backend/app/db/alembic/: env.py
new/src/backend/app/db/models/: calculation.py  moleculeset_stats.py
new/src/backend/app/db/repositories/: calculation_config_repository.py  calculation_repository.py  calculation_set_repository.py  calculations_repository.py  moleculeset_stats_repository.py  user_repository.py
new/src/backend/app/db/schemas/: calculation.py
new/src/backend/app/examples/1f16/: 8711f7313c95a512903554ec399c2ebddcafa4be07ffbb409e5f4ae1663bef31_1f16_updated.cif.txt
new/src/backend/app/examples/2k7w/: 7ceb5727929dc72333d512a92335267cddcf4e03e830b93faefbbaf6f9369ad6_2k7w_updated.cif.pqr
new/src/backend/app/models/: calculation.py  molecule_info.py  parameters.py  setup.py
new/src/backend/app/services/: calculation_storage.py  chargefw2.py  file_storage.py  io.py  mmcif.py  oidc.py
new/src/backend/tests/integrations/: test_io_local.py
(+451 files in other folders)
